[gd_scene load_steps=13 format=2]

[ext_resource path="res://enemies/aux_scenes/gore.gd" type="Script" id=1]
[ext_resource path="res://enemies/zombie/sprites/idle_arms_spriteSheet.png" type="Texture" id=2]
[ext_resource path="res://enemies/zombie/sprites/idle_body_spriteSheet.png" type="Texture" id=3]

[sub_resource type="Animation" id=9]
resource_name = "fadeOut"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 60, 70, 40, 60 )

[sub_resource type="ParticlesMaterial" id=8]
resource_local_to_scene = true
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, 98, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.55
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 6.0
scale_random = 1.0
color = Color( 0.47451, 0.0666667, 0.0666667, 1 )
hue_variation = -0.05
hue_variation_random = 0.5

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 90, 130, 20, 50 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 60, 130, 10, 50 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 40, 90, 50, 20 )

[sub_resource type="ParticlesMaterial" id=10]
resource_local_to_scene = true
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, 98, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.55
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 6.0
scale_random = 1.0
color = Color( 0.47451, 0.0666667, 0.0666667, 1 )
hue_variation = -0.05
hue_variation_random = 0.5

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 30, 80, 30, 10 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 60, 20, 30, 50 )

[node name="gore" type="Node2D"]
script = ExtResource( 1 )

[node name="queue_free_delay" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="wait_before_fading_out" type="Timer" parent="."]
wait_time = 17.0
one_shot = true
autostart = true

[node name="fadeOut" type="AnimationPlayer" parent="."]
anims/fadeOut = SubResource( 9 )

[node name="body" type="RigidBody2D" parent="."]
collision_layer = 8
collision_mask = 0
mass = 100.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="body"]
scale = Vector2( 0.8, 0.8 )
texture = SubResource( 11 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="body"]
polygon = PoolVector2Array( -16, -16, -8, -24, 8, -24, 16, -16, 16, 16, 8, 24, -8, 24, -16, 16 )

[node name="Particles2D" type="Particles2D" parent="body"]
position = Vector2( 0, -24 )
rotation = 3.14159
lifetime = 6.0
speed_scale = 2.0
local_coords = false
process_material = SubResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[node name="Particles2D2" type="Particles2D" parent="body"]
position = Vector2( -8, 24 )
lifetime = 6.0
speed_scale = 2.0
local_coords = false
process_material = SubResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[node name="Particles2D3" type="Particles2D" parent="body"]
position = Vector2( 8, 24 )
lifetime = 6.0
speed_scale = 2.0
local_coords = false
process_material = SubResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[node name="leg" type="RigidBody2D" parent="."]
position = Vector2( 0, 44 )
collision_layer = 8
collision_mask = 0
mass = 20.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="leg"]
scale = Vector2( 0.8, 0.8 )
texture = SubResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="leg"]
polygon = PoolVector2Array( -8, -20, 0, -12, 0, 12, 8, 12, 8, 20, 0, 20, -8, 12 )

[node name="Particles2D" type="Particles2D" parent="leg"]
position = Vector2( -4, -20 )
rotation = 3.14159
lifetime = 6.0
speed_scale = 2.0
local_coords = false
process_material = SubResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[node name="leg2" type="RigidBody2D" parent="."]
position = Vector2( 0, 44 )
collision_layer = 8
collision_mask = 0
mass = 20.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="leg2"]
scale = Vector2( 0.8, 0.8 )
texture = SubResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="leg2"]
polygon = PoolVector2Array( -4, -20, 0, -20, 4, -12, 4, 20, 0, 20, -4, 12 )

[node name="Particles2D" type="Particles2D" parent="leg2"]
position = Vector2( 0, -20 )
rotation = 3.14159
lifetime = 6.0
speed_scale = 2.0
local_coords = false
process_material = SubResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[node name="arm" type="RigidBody2D" parent="."]
position = Vector2( 0, -8 )
collision_layer = 8
collision_mask = 0
mass = 16.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="arm"]
scale = Vector2( 0.8, 0.8 )
texture = SubResource( 7 )
offset = Vector2( 0, -4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="arm"]
polygon = PoolVector2Array( -12, -3, 16, -3, 20, 5, -8, 5 )

[node name="Particles2D" type="Particles2D" parent="arm"]
position = Vector2( 16, -10 )
rotation = 3.14159
lifetime = 6.0
speed_scale = 2.0
local_coords = false
process_material = SubResource( 10 )
__meta__ = {
"_editor_description_": ""
}

[node name="arm2" type="RigidBody2D" parent="."]
position = Vector2( 0, -24 )
collision_layer = 8
collision_mask = 0
mass = 16.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="arm2"]
scale = Vector2( 0.8, 0.8 )
texture = SubResource( 12 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="arm2"]
polygon = PoolVector2Array( -12, -4, 8, -4, 12, 4, -8, 4 )

[node name="Particles2D" type="Particles2D" parent="arm2"]
position = Vector2( 12, 0 )
rotation = -1.5708
lifetime = 6.0
speed_scale = 2.0
local_coords = false
process_material = SubResource( 10 )
__meta__ = {
"_editor_description_": ""
}

[node name="head" type="RigidBody2D" parent="."]
position = Vector2( 0, -44 )
collision_layer = 8
collision_mask = 0
mass = 30.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="head"]
scale = Vector2( 0.8, 0.8 )
texture = SubResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="head"]
polygon = PoolVector2Array( -12, 12, -12, -12, -4, -20, 4, -20, 12, -12, 12, 12, 4, 20, -4, 20 )

[node name="Particles2D" type="Particles2D" parent="head"]
position = Vector2( 0, 20 )
amount = 200
lifetime = 6.0
speed_scale = 2.0
local_coords = false
process_material = SubResource( 8 )
__meta__ = {
"_editor_description_": ""
}

[connection signal="timeout" from="queue_free_delay" to="." method="_on_queue_free_delay_timeout"]
[connection signal="timeout" from="wait_before_fading_out" to="." method="_on_wait_before_fading_out_timeout"]
